# cabot_sites_test

./: README.md  build-pkg.sh
cabot_site_test_room/: CMakeLists.txt  package.xml
cabot_site_test_room/cabot_site_test_room/: tests-avoid-obstacle.py  tests-elevator-door.py  tests-elevator.py  tests-exhibit.py  tests-kill.py  tests-narrow.py  tests-obstacle-plugin.py  tests-people.py  tests-queue.py  tests-social.py  tests-step.py  tests.py  walk_near_robot.py
cabot_site_test_room/config/: config.sh
cabot_site_test_room/maps/: mapping_2024-02-14-13-17-55.carto-converted.info.txt  mapping_2024-02-14-13-17-55.carto-converted.loc.samples-3F.json  mapping_2024-02-14-13-17-55.carto-converted.loc.samples.json  mapping_2024-02-14-13-17-55.carto-converted.pgm  mapping_2024-02-14-13-17-55.carto-converted.yaml  test-room.yaml
cabot_site_test_room/models/: beacons_test.csv
cabot_site_test_room/models/cube/: model.sdf
cabot_site_test_room/models/person-shadow/: model.config  model.sdf
cabot_site_test_room/models/person-shadow/materials/: person-shadow.material
cabot_site_test_room/models/slope/: model.sdf
cabot_site_test_room/models/test-floor/: model.config  model.sdf
cabot_site_test_room/queue/gazebo/detector/: config.yaml
cabot_site_test_room/queue/gazebo/detector/map_carto1_1/: queue-expected-path.json  queue-obstacle-polygon.json
cabot_site_test_room/server_data/: .gitignore  MapData.geojson
cabot_site_test_room/server_data/attachments/map/: floormaps.json
cabot_site_test_room/worlds/: test-room.world  test_wireless.yaml
(+33 files in other folders)
